--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@preact/signals-react": "^3.0.1",
+    "@tanstack/react-query": "^5.76.1",
+    "axios": "^1.9.0",
     "hono": "^4.7.8",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.510.0",
     "mongoose": "^8.14.1",
     "next": "15.3.1",
     "react": "^19.0.0",
