--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@preact/signals-react": "^3.0.1",
     "@tanstack/react-query": "^5.76.1",
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "hono": "^4.7.8",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
